--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     },
     "require": {
         "netcommons/files":             "dev-master",
-        "netcommons/net-commons":       "dev-master"
+        "netcommons/net-commons":       "dev-master",
+        "ezyang/htmlpurifier":          "dev-master"
     },
     "license": "NetCommons License",
     "authors": [
